[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/images/ui/background_tooltip_image.png" type="Texture" id=1]
[ext_resource path="res://game/tooltip/Tooltip.gd" type="Script" id=2]
[ext_resource path="res://assets/images/ui/tooltip_bg.png" type="Texture" id=3]
[ext_resource path="res://assets/images/intents/attack_normal.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/TooltipSubtitleFontNormal.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/fonts/TooltipFontBig.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/fonts/TooltipTitleFontNormal.tres" type="DynamicFont" id=7]

[node name="Tooltip" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1920.0
margin_bottom = -1080.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="NinePatchRect" parent="."]
margin_right = 220.0
margin_bottom = 210.0
mouse_filter = 1
texture = ExtResource( 3 )
patch_margin_left = 35
patch_margin_top = 35
patch_margin_right = 35
patch_margin_bottom = 35
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleImageBG" type="TextureRect" parent="."]
margin_left = 114.887
margin_top = 24.9054
margin_right = 179.887
margin_bottom = 78.9054
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleImage" type="TextureRect" parent="TitleImageBG"]
margin_left = 13.0846
margin_top = 4.03927
margin_right = 61.0846
margin_bottom = 52.0393
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 33.5946
margin_top = 38.3026
margin_right = 86.5946
margin_bottom = 75.3026
mouse_filter = 1
custom_fonts/font = ExtResource( 7 )
text = "Title"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subtitle" type="Label" parent="."]
margin_left = 32.8595
margin_top = 71.8921
margin_right = 62.8595
margin_bottom = 97.8921
mouse_filter = 1
custom_fonts/font = ExtResource( 5 )
text = "Sub"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="."]
margin_left = 31.8595
margin_top = 97.9849
margin_right = 188.859
margin_bottom = 131.985
rect_clip_content = false
size_flags_vertical = 3
custom_constants/line_separation = -4
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "This is a sample text and is just like this, a sample"
text = "This is a sample text and is just like this, a sample"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="gui_input" from="BG" to="." method="_on_BG_gui_input"]
[connection signal="gui_input" from="TitleImageBG/TitleImage" to="." method="_on_BG_gui_input"]
[connection signal="gui_input" from="Title" to="." method="_on_BG_gui_input"]
[connection signal="gui_input" from="Subtitle" to="." method="_on_BG_gui_input"]
[connection signal="gui_input" from="Text" to="." method="_on_BG_gui_input"]
